# ros2_quadrotor_simulator

./: .clang-format  .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  CONTRIBUTING.md  COPILOT.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  package.xml  requirements.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: simulator_params.yaml
docs/: ASCTEC_HUMMINGBIRD_EMULATION.md  CORE_INTERFACES.md  DEVELOPMENT_SETUP.md  GIT_WORKFLOW.md  PROJECT_ROADMAP.md  REQUIREMENTS_MANAGEMENT.md  TESTING_STRATEGY.md
docs/requirements/: functional.md  interface.md  non-functional.md  requirements.md
docs/requirements/categories/: functional.md  interface.md  system.md
docs/requirements/matrices/: traceability.md
docs/requirements/modules/control/: requirements.md
docs/requirements/modules/dynamics/: requirements.md
docs/requirements/modules/interface/: requirements.md
docs/requirements/modules/sensors/: requirements.md
docs/requirements/modules/visualization/: requirements.md
docs/requirements/tracking/: changes.md
docs/requirements/validation/: validation_plan.md
launch/: simulator.launch.py
test/slash_tests/: README.md  conftest.py
test/slash_tests/test_dynamics/: test_hover.py
